--- a/base/templates/additional_vars.yml
+++ b/base/templates/additional_vars.yml
@@ -5,3 +5,8 @@
       # see http://duplicity.nongnu.org/duplicity.1.html#sect7
       schedule: '0 4 * * *' # cron time of backups (change this value)
       purge: false # switch to true to enable automatic purging of old backups
+      params:
+        - 'export S3_USE_SIGV4="True"'
+      post_actions:
+        - 'WEBHOOK_URL=""'
+        - 'if [ "$WEBHOOK_URL" != "" ]; if [ $CMD_ERR -ne 0 ]; then curl -H "Content-Type: application/json" -X POST -d \'{"site": "example.com", "message": "The backup failed."}\' $WEBHOOK_URL; fi; fi'
